--- a/blogpessoal/pom.xml
+++ b/blogpessoal/pom.xml
@@ -49,6 +49,10 @@
 		<dependency> <groupId>org.springframework.boot</groupId> 
 		<artifactId>spring-boot-starter-security</artifactId> 
 		</dependency>
+		<dependency>
+		<groupId>commons-codec</groupId> 
+		<artifactId>commons-codec</artifactId> 
+		</dependency>
 	</dependencies>
 
 	<build>
